add some page descriptions

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Team
+description: Learn about Skylight’s story to make government work in a digital world, and meet our team of diverse and talented public-interest technologists.
 permalink: /company/about/
 redirect_from: /about/
 preload: hero-about-us.svg
