--- a/pages/blog_posts/index.html
+++ b/pages/blog_posts/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Our blog
+description: Check out our blog posts to learn about our thoughts on design and technology, the projects we work on, and the incredible people on our team.
 permalink: /thoughts/blog/
 redirect_from:
   - /blog/
