--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Contact us
+description: We’d love to help turn your most bold idea or complex problem into a public success story. Here’s how to get in touch with us.
 permalink: /connect/contact/
 redirect_from:
   - /hire-us/
