--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Contracting
+description: There are so many reasons to work with us. Learn more about why and how to contract with us.
 permalink: /connect/contracting/
 preload: hero-contracting.svg
 ---
