--- a/pages/join.html
+++ b/pages/join.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Join us
+description: Join a diverse and talented team at Skylight. Learn about opportunities in civic technology across research, design, product, engineering, and more.
 permalink: /careers/join/
 redirect_from: /join/
 hero_content: Help us change the way government works.
