--- a/pages/policies.html
+++ b/pages/policies.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Our policies
+description: Our policies govern how we interact with you and our fellow colleagues.
 permalink: /company/policies/
 ---
 
