--- a/pages/press/index.html
+++ b/pages/press/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Press
+description: The work we do is worth talking about. Learn more about how Skylight is helping the government deliver better public services.
 permalink: /company/press/
 pagination:
   enabled: true
