--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Our experience
+description: Explore a sampling of the types of experience that Skylight brings to your biggest digital challenges.
 permalink: /work/experience/
 redirect_from:
   - /work/
