--- a/pages/services.html
+++ b/pages/services.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Our services
+description: A lot goes into making you a digital-first agency. Learn more about how Skylight’s services are designed to help you succeed in today’s digital world.
 permalink: /work/services/
 redirect_from:
   - /services/digital-procurement/
