--- a/pages/talks/index.html
+++ b/pages/talks/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Talks
+description: Check out our talks on design, technology, and more — from the practices we use to our conversations with outside experts.
 permalink: /thoughts/talks/
 preload: hero-talks.svg
 pagination:
