--- a/pages/training.html
+++ b/pages/training.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Training
+description: All government agencies are now technology organizations. Learn more about what training options Skylight offers to help build your digital skills.
 permalink: /work/services/training/
 preload: hero-training.svg
 image: /img/training-social.png
