--- a/pages/values.html
+++ b/pages/values.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Our values
+description: Our values are the core of Skylight’s culture, informing our thoughts, words, and actions.
 permalink: /company/values/
 redirect_from: /culture/
 preload: hero-values.svg
