Add Service Design Framework (#170)
Co-authored-by: Chris Cairns <keruilin@gmail.com>
Co-authored-by: mattmgoldberg <87032674+mattmgoldberg@users.noreply.github.com>

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -241,10 +241,10 @@ class_2_spots:
             <div class="course-cta card border p-4">
               <p>Want to know more about our course?</p>
               <p class="mt-3">
-                <a href="/assets/Skylight-DITAP-Syllabus.pdf"
-                  >Read syllabus
-                  <i class="fal fa-long-arrow-right" aria-hidden="true"></i
-                ></a>
+                <a class="link--cta" href="/assets/Skylight-DITAP-Syllabus.pdf">
+                  <span class="link__text--cta">Read syllabus</span>
+                  <i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+                </a>
               </p>
             </div>
           </div>
