--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -212,13 +212,14 @@ class_2_spots:
               <p>Ready to get started?</p>
               <p class="mt-3">
                 <a
+                  class="link--cta"
                   href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308"
-                  >Register now
+                  ><span class="link__text--cta">Register now</span>
                   <i
                     class="fal fa-long-arrow-right"
                     aria-hidden="true"
-                  ></i
-                ></a>
+                  ></i>
+                </a>
               </p>
             </div>
           </div>
