Style hero and footer cta

--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -12,33 +12,33 @@ class:
 <section class="bg-primary hero-banner">
   <div class="hero">
     <div class="hero-container grid-container">
-      <div class="maxw-lg">
-        <div class="my-5">
+      <div class="brand-hero__content row align-items-end">
+        <div class="col-md-8 my-5 prose ">
           <h1 class="text-white">
             Brand Guidelines
           </h1>
-          <p class="hero-text text-white font-lg">
+          <p class="hero-text text-white font-lg mb-0">
             Hello! Welcome to Skylight’s brand guidelines. Our guidelines are designed
             to communicate who Skylight is to our customers, partners, employees, and
             prospective hires. If you can’t find what you need, please contact us.
           </p>
         </div>
-      </div>
 
-      <div>
-        <h2>Quick links</h2>
-        <ul class="text-white">
-          <li><a href="/brand/identity/colors/">Brand colors</a></li>
-          <li><a href="/brand/identity/logo/">Logo</a></li>
-          <li><a href="/brand/identity/typography/">Fonts</a></li>
-          <li><a href="/brand/writing/style/">Writing style</a></li>
-        </ul>
+        <div class="brand__quick-links col-md-4 mb-5">
+          <h2 class="kicker">Quick links</h2>
+          <ul class="quick-links__list list-unstyled mb-0 mt-2">
+            <li><a href="/brand/identity/colors/">Brand colors</a></li>
+            <li><a href="/brand/identity/logo/">Logo</a></li>
+            <li><a href="/brand/identity/typography/">Fonts</a></li>
+            <li><a href="/brand/writing/style/">Writing style</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
 </section>
 
-<section>
+<section class="grid-container py-6">
   <ul>
     <li>
       <a href="/brand/identity/logo/">Identity</a>
@@ -63,10 +63,10 @@ class:
   </ul>
 </section>
 
-<section class="bg-gray-lightest">
-  <div class="grid-container">
-    <h2>Working with customers and partners</h2>
-    <p>
+<section class="bg-gray-lightest py-6">
+  <div class="grid-container prose">
+    <h2 class="font-xl">Working with customers and partners</h2>
+    <p class="maxw-md">
       At Skylight, you’ll often be working alongside customers with their own
       design systems and branding. For example, if you’re helping your U.S. Air
       Force client prepare a presentation to a four-star general, you should most
