Change CTA to framework

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -176,7 +176,7 @@ image_description: Skylight toolkits banner showing a collection of different to
           </div>
           <div class="blog-post-footer">
             <a href="/work/toolkits/service-design-framework/" tabindex="0">
-              <span>View guide</span
+              <span>View framework</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
           </div>
