--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -27,10 +27,10 @@ class:
         <div class="brand__quick-links col-md-4 mb-5">
           <h2 class="kicker">Quick links</h2>
           <ul class="quick-links__list list-unstyled mb-0 mt-1">
-            <li><a href="/brand/identity/colors/">Brand colors</a></li>
-            <li><a href="/brand/identity/logo/">Logo</a></li>
-            <li><a href="/brand/identity/typography/">Fonts</a></li>
-            <li><a href="/brand/writing/style/">Writing style</a></li>
+            <li><a href="/brand/identity/colors/">Brand colors<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
+            <li><a href="/brand/identity/logo/">Logo<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
+            <li><a href="/brand/identity/typography/">Fonts<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
+            <li><a href="/brand/writing/style/">Writing style<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
           </ul>
         </div>
       </div>
