--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -20,7 +20,7 @@ class:
           <p class="hero-text text-white font-lg mb-0">
             Hello! Welcome to Skylight’s brand guidelines. Our guidelines are designed
             to communicate who Skylight is to our customers, partners, employees, and
-            prospective hires. If you can’t find what you need, please contact us.
+            prospective hires. If you can’t find what you need, please <a href="mailto:admin@skylight.digital">contact us</a>.
           </p>
         </div>
 
