Add landing images

--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -40,7 +40,7 @@ class:
 
 <section class="grid-container text prose mt-6 mb-2">
   <div class="blog-posts-row">
-    <article class="blog-post-col col-md-4">
+    <article class="blog-post-col col-md-6 col-lg-4">
       <div
         class="blog-post-card card-link card--identity"
         data-href="/brand/identity/logo/"
@@ -62,7 +62,7 @@ class:
         </div>
       </div>
     </article>
-    <article class="blog-post-col col-md-4">
+    <article class="blog-post-col col-md-6 col-lg-4">
       <div
         class="blog-post-card card-link card--writing"
         data-href="/brand/writing/brand-narrative/"
@@ -84,7 +84,7 @@ class:
         </div>
       </div>
     </article>
-    <article class="blog-post-col col-md-4">
+    <article class="blog-post-col col-md-6 col-lg-4">
       <div
         class="blog-post-card card-link card--illustration"
         data-href="/brand/illustration/principles/"
@@ -106,7 +106,7 @@ class:
         </div>
       </div>
     </article>
-    <article class="blog-post-col col-md-4">
+    <article class="blog-post-col col-md-6 col-lg-4">
       <div
         class="blog-post-card card-link card--outreach"
         data-href="/brand/outreach/intro/"
@@ -128,7 +128,7 @@ class:
         </div>
       </div>
     </article>
-    <article class="blog-post-col col-md-4">
+    <article class="blog-post-col col-md-6 col-lg-4">
       <div
         class="blog-post-card card-link card--resources"
         data-href="/brand/resources/emoji/"
