--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -121,7 +121,7 @@ class:
           </p>
         </div>
         <div class="blog-post-footer">
-          <a href="/brand/outreach/graphic-elements/" tabindex="0">
+          <a href="/brand/outreach/intro/" tabindex="0">
             <span>View guide</span
             ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
           </a>
