--- a/pages/training.html
+++ b/pages/training.html
@@ -17,53 +17,30 @@ image_description: Skylight training banner showing various educational-related 
 <section class="mx-auto maxw-md">
   <div class="grid-container text prose">
     <div class="blog-posts-row mt-5">
-      <article class="blog-post-col col-md-6">
-        <div
-          class="blog-post-card card-link"
-          data-href="/work/services/training/ditap/"
-          tabindex="-1"
-        >
-          <div class="blog-post-block">
-            <h2 class="blog-post-title">
-              Digital IT Acquisition Professional (DITAP) Training
-            </h2>
-            <p class="card-text blog-post-text">
-              Become a certified digial acquisition professional through our
-              expert-led, 6-month, part-time course.
-            </p>
+      {% for training in site.data.training %}
+        <article class="blog-post-col col-md-6">
+          <div
+            class="blog-post-card card-link"
+            data-href="{{ training.url }}"
+            tabindex="-1"
+          >
+            <div class="blog-post-block">
+              <h2 class="blog-post-title">
+                {{ training.name }}
+              </h2>
+              <p class="card-text blog-post-text">
+                {{ training.description }}
+              </p>
+            </div>
+            <div class="blog-post-footer">
+              <a href="{{ training.url }}" tabindex="0">
+                <span>Learn more</span
+                ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+              </a>
+            </div>
           </div>
-          <div class="blog-post-footer">
-            <a href="/work/services/training/ditap/" tabindex="0">
-              <span>Learn more</span
-              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
-            </a>
-          </div>
-        </div>
-      </article>
-      <article class="blog-post-col col-md-6">
-        <div
-          class="blog-post-card card-link"
-          data-href="/work/services/training/ditap-executive/"
-          tabindex="-1"
-        >
-          <div class="blog-post-block">
-            <h2 class="blog-post-title">
-              Digital IT Acquisition Professional (DITAP) Training —
-              Executive Edition
-            </h2>
-            <p class="card-text blog-post-text">
-              Learn how to lead your agency into the world of modern procurement
-              through a condensed, 1-day version of our 6-month DITAP program.
-            </p>
-          </div>
-          <div class="blog-post-footer">
-            <a href="/work/services/training/ditap-executive/" tabindex="0">
-              <span>Learn more</span
-              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
-            </a>
-          </div>
-        </div>
-      </article>
+        </article>
+      {% endfor %}
     </div>
   </div>
 </section>
