Update landing hero

--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -13,18 +13,18 @@ class:
   <div class="hero">
     <div class="hero-container grid-container">
       <div class="brand-hero__content row align-items-end">
-        <div class="col-md-8 my-5 prose ">
+        <div class="col-md-7 my-5 prose ">
           <h1 class="text-white">
             Brand Guidelines
           </h1>
-          <p class="hero-text text-white font-lg mb-0">
+          <p class="hero-text text-white mb-0">
             Hello! Welcome to Skylight’s brand guidelines. Our guidelines are designed
             to communicate who Skylight is to our customers, partners, employees, and
             prospective hires. If you can’t find what you need, please <a href="mailto:admin@skylight.digital">contact us</a>.
           </p>
         </div>
 
-        <div class="brand__quick-links col-md-4 mb-5">
+        <div class="brand__quick-links col-md-4 offset-md-1 mb-5">
           <h2 class="kicker">Quick links</h2>
           <ul class="quick-links__list list-unstyled mb-0 mt-1">
             <li><a href="/brand/identity/colors/">Brand colors<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
