Update landing hero

--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -24,7 +24,7 @@ class:
           </p>
         </div>
 
-        <div class="brand__quick-links col-md-4 offset-md-1 mb-5">
+        <div class="brand__quick-links col-md-5 offset-lg-1 col-lg-4 mb-5">
           <h2 class="kicker">Quick links</h2>
           <ul class="quick-links__list list-unstyled mb-0 mt-1">
             <li><a href="/brand/identity/colors/">Brand colors<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
