Add various updates

--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -28,7 +28,7 @@ class:
           <h2 class="kicker">Quick links</h2>
           <ul class="quick-links__list list-unstyled mb-0 mt-1">
             <li><a href="/brand/identity/colors/">Brand colors<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
-            <li><a href="/brand/identity/logo/">Logo<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
+            <li><a href="/brand/identity/logos/">Logo<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
             <li><a href="/brand/identity/typography/">Fonts<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
             <li><a href="/brand/writing/style/">Writing style<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
           </ul>
@@ -43,7 +43,7 @@ class:
     <article class="blog-post-col col-md-6 col-lg-4">
       <div
         class="blog-post-card card-link card--identity"
-        data-href="/brand/identity/logo/"
+        data-href="/brand/identity/logos/"
         tabindex="-1"
       >
         <div class="blog-post-block">
@@ -55,7 +55,7 @@ class:
           </p>
         </div>
         <div class="blog-post-footer">
-          <a href="/brand/identity/logo/" tabindex="0">
+          <a href="/brand/identity/logos/" tabindex="0">
             <span>View guide</span
             ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
           </a>
