--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -28,7 +28,7 @@ class:
           <h2 class="kicker">Quick links</h2>
           <ul class="quick-links__list list-unstyled mb-0 mt-1">
             <li><a href="/brand/identity/colors/">Brand colors<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
-            <li><a href="/brand/identity/logos/">Logo<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
+            <li><a href="/brand/identity/logos/">Logos<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
             <li><a href="/brand/identity/typography/">Fonts<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
             <li><a href="/brand/writing/style/">Writing style<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
           </ul>
