--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -109,7 +109,7 @@ class:
     <article class="blog-post-col col-md-6 col-lg-4">
       <div
         class="blog-post-card card-link card--outreach"
-        data-href="/brand/outreach/intro/"
+        data-href="/brand/outreach/general-guidance/"
         tabindex="-1"
       >
         <div class="blog-post-block">
@@ -121,7 +121,7 @@ class:
           </p>
         </div>
         <div class="blog-post-footer">
-          <a href="/brand/outreach/intro/" tabindex="0">
+          <a href="/brand/outreach/general-guidance/" tabindex="0">
             <span>View guide</span
             ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
           </a>
