--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -14,9 +14,9 @@ image_description: Skylight toolkits banner showing a collection of different to
   image = "hero-toolkits.svg"
 %}
 
-<section class="maxw-md grid-container text prose">
+<section class="maxw-md grid-container prose">
   <div>
-    <p>
+    <p class="text">
       Here are some of the tools and resources that we use at Skylight to help
       us and our clients deliver better public services. These toolkits are
       always being iterated on and are available to everyone under a
