Remove text class from trainings

--- a/pages/training.html
+++ b/pages/training.html
@@ -15,7 +15,7 @@ image_description: Skylight training banner showing various educational-related 
 %}
 
 <section class="mx-auto maxw-md">
-  <div class="grid-container text prose">
+  <div class="grid-container prose">
     <div class="blog-posts-row mt-5">
       {% for training in site.data.training %}
         <article class="blog-post-col col-md-6">
