--- a/pages/join.html
+++ b/pages/join.html
@@ -238,7 +238,7 @@ preload: hero-join-us.svg
 
         <h3>3. Skills interview</h3>
         <p>
-          The skills interview lasts approximately one and a half hours. You’ll be asked a
+          The skills interview runs between 60 and 90 minutes. You’ll be asked a
           variety of questions about your experience and skills, and how you’d apply
           them within the context of Skylight’s work.
         </p>
