Re-add IDs to headings

--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -25,7 +25,8 @@ class:
         </div>
 
         <div class="brand__quick-links col-md-5 offset-lg-1 col-lg-4 mb-5">
-          <h2 class="kicker">Quick links</h2>
+          <h2 class="kicker">Quick links
+  </header>
           <ul class="quick-links__list list-unstyled mb-0 mt-1">
             <li><a href="/brand/identity/colors/">Brand colors<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
             <li><a href="/brand/identity/logos/">Logos<i class="fal fa-long-arrow-right ml-3" aria-hidden="true"></i></a></li>
@@ -49,7 +50,8 @@ class:
         <div class="blog-post-block">
           <h2 class="blog-post-title">
             Identity
-          </h2>
+
+  </header>
           <p class="card-text blog-post-text">
             {{ site.data.toolkits.brand_identity.description }}
           </p>
@@ -71,7 +73,8 @@ class:
         <div class="blog-post-block">
           <h2 class="blog-post-title">
             Writing
-          </h2>
+
+  </header>
           <p class="card-text blog-post-text">
             {{ site.data.toolkits.brand_writing.description }}
           </p>
@@ -93,7 +96,8 @@ class:
         <div class="blog-post-block">
           <h2 class="blog-post-title">
             Illustration
-          </h2>
+
+  </header>
           <p class="card-text blog-post-text">
             {{ site.data.toolkits.brand_illustration.description }}
           </p>
@@ -115,7 +119,8 @@ class:
         <div class="blog-post-block">
           <h2 class="blog-post-title">
             Outreach
-          </h2>
+
+  </header>
           <p class="card-text blog-post-text">
             {{ site.data.toolkits.brand_outreach.description }}
           </p>
@@ -137,7 +142,8 @@ class:
         <div class="blog-post-block">
           <h2 class="blog-post-title">
             Resources
-          </h2>
+
+  </header>
           <p class="card-text blog-post-text">
             {{ site.data.toolkits.brand_resources.description }}
           </p>
@@ -155,7 +161,8 @@ class:
 
 <section class="bg-gray-lightest py-6">
   <div class="grid-container prose">
-    <h2 class="font-xl">Working with customers and partners</h2>
+    <h2 class="font-xl">Working with customers and partners
+  </header>
     <p class="maxw-md">
       At Skylight, you’ll often be working alongside customers with their own
       design systems and branding. For example, if you’re helping your U.S. Air
