Update hero copy

--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -18,9 +18,7 @@ class:
             Brand Guidelines
           </h1>
           <p class="hero-text text-white mb-0">
-            Hello! Welcome to Skylight’s brand guidelines. Our guidelines are designed
-            to communicate who Skylight is to our customers, partners, employees, and
-            prospective hires. If you can’t find what you need, please <a href="mailto:admin@skylight.digital">contact us</a>.
+            Hello! Welcome to Skylight’s brand guidelines. Our guidelines are designed to unify our communications to customers, partners, employees, and prospective hires. If you can’t find what you need, please <a href="mailto:admin@skylight.digital">contact us</a>.
           </p>
         </div>
 
