Add sr-only text to the landing page card links

--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -54,7 +54,7 @@ class:
         </div>
         <div class="blog-post-footer">
           <a href="/brand/identity/logos/" tabindex="0">
-            <span>View guide</span
+            <span>View <span class="sr-only">identity </span>guide</span
             ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
           </a>
         </div>
@@ -76,7 +76,7 @@ class:
         </div>
         <div class="blog-post-footer">
           <a href="/brand/writing/brand-narrative/" tabindex="0">
-            <span>View guide</span
+            <span>View <span class="sr-only">writing </span>guide</span
             ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
           </a>
         </div>
@@ -98,7 +98,7 @@ class:
         </div>
         <div class="blog-post-footer">
           <a href="/brand/illustration/principles/" tabindex="0">
-            <span>View guide</span
+            <span>View <span class="sr-only">illustration </span>guide</span
             ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
           </a>
         </div>
@@ -120,7 +120,7 @@ class:
         </div>
         <div class="blog-post-footer">
           <a href="/brand/outreach/design-guidance/" tabindex="0">
-            <span>View guide</span
+            <span>View <span class="sr-only">outreach </span>guide</span
             ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
           </a>
         </div>
