Update margins around image in Service Design

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -105,7 +105,7 @@ preload: hero-service-design.svg
         plan." cite_name = "Eero Saarinen" cite_title = "Architect" class=
         "pullquote--alt" %}
         <h2 class="sd__heading" id="what-we-deliver">What we deliver</h2>
-        <p>
+        <p class="mb-0">
           Our goal is to help you embed service design ways of thinking and
           working throughout your entire organization. To accomplish that, our
           experts collaborate with you to identify your goals and needs, then
