Update page title

--- a/pages/pcf/index.html
+++ b/pages/pcf/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Professional Capability Framework
+title: Skylight Career Pathways
 description: text
-permalink: /careers/professional-capability-framework/
+permalink: /careers/career-pathways/
 hero_content: Roles at Skylight and the skills needed to do them.
 preload: hero-join-us.svg
 ---
@@ -20,10 +20,10 @@ preload: hero-join-us.svg
       Lorem ipsum.
     </p>
     <p>
-      <a href="/careers/professional-capability-framework/user-researcher/">User Researcher</a>
+      <a href="/careers/career-pathways/user-researcher/">User Researcher</a>
     </p>
     <p>
-      <a href="/careers/professional-capability-framework/product-manager/">Product Manager</a>
+      <a href="/careers/career-pathways/product-manager/">Product Manager</a>
     </p>
   </div>
 </div>
