Use sentence case

--- a/pages/pcf/index.html
+++ b/pages/pcf/index.html
@@ -20,10 +20,10 @@ preload: hero-join-us.svg
       Lorem ipsum.
     </p>
     <p>
-      <a href="/careers/career-pathways/user-researcher/">User Researcher</a>
+      <a href="/careers/career-pathways/user-researcher/">User researcher</a>
     </p>
     <p>
-      <a href="/careers/career-pathways/product-manager/">Product Manager</a>
+      <a href="/careers/career-pathways/product-manager/">Product manager</a>
     </p>
   </div>
 </div>
