--- a/pages/pcf/product-manager.html
+++ b/pages/pcf/product-manager.html
@@ -22,12 +22,12 @@ preload: hero-join-us.svg
             <li class="current">
               <a class="nav-link" href="#" aria-current="location">Introduction</a>
             </li>
-            <li><a class="nav-link" href="#">Associate Product Manager</a></li>
-            <li><a class="nav-link" href="#">Junior Product Manager</a></li>
-            <li><a class="nav-link" href="#">Product Manager</a></li>
-            <li><a class="nav-link" href="#">Senior Product Manager</a></li>
-            <li><a class="nav-link" href="#">Staff Product Manager</a></li>
-            <li><a class="nav-link" href="#">Principal Product Manager</a></li>
+            <li><a class="nav-link" href="#">Associate product manager</a></li>
+            <li><a class="nav-link" href="#">Junior product manager</a></li>
+            <li><a class="nav-link" href="#">Product manager</a></li>
+            <li><a class="nav-link" href="#">Senior product manager</a></li>
+            <li><a class="nav-link" href="#">Staff product manager</a></li>
+            <li><a class="nav-link" href="#">Principal product manager</a></li>
           </ul>
         </nav>
       </div>
