--- a/pages/pcf/user-researcher.html
+++ b/pages/pcf/user-researcher.html
@@ -22,12 +22,12 @@ preload: hero-join-us.svg
             <li class="current">
               <a class="nav-link" href="#" aria-current="location">Introduction</a>
             </li>
-            <li><a class="nav-link" href="#">Associate User Researcher</a></li>
-            <li><a class="nav-link" href="#">Junior User Researcher</a></li>
-            <li><a class="nav-link" href="#">User Researcher</a></li>
-            <li><a class="nav-link" href="#">Senior User Researcher</a></li>
-            <li><a class="nav-link" href="#">Staff User Researcher</a></li>
-            <li><a class="nav-link" href="#">Principal User Researcher</a></li>
+            <li><a class="nav-link" href="#">Associate user researcher</a></li>
+            <li><a class="nav-link" href="#">Junior user researcher</a></li>
+            <li><a class="nav-link" href="#">User researcher</a></li>
+            <li><a class="nav-link" href="#">Senior user researcher</a></li>
+            <li><a class="nav-link" href="#">Staff user researcher</a></li>
+            <li><a class="nav-link" href="#">Principal user researcher</a></li>
           </ul>
         </nav>
       </div>
