--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -22,8 +22,8 @@ image_description: Skylight toolkits banner showing a collection of different to
       always being iterated on and are available to everyone under a
       <a
         href="https://github.com/skylight-hq/skylight.digital/blob/master/LICENSE.md"
-        >creative-commons or public-domain license.</a
-      >
+        >creative-commons or public-domain license</a
+      >.
       Feel free to copy and adapt them as you choose.
     </p>
 
